--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -98,6 +98,7 @@
       <button class="btn" onclick="openModal('clientModal')">+ Add Client</button>
       <button class="btn" onclick="openModal('caseModal')">+ Add Case</button>
       <button class="btn" onclick="location.href='/report'">Reports</button>
+      <button class="btn" onclick="openModal('apiModal')">API Keys</button>
     </div>
     <img src="/static/redwood-logo.png" alt="Redwood">
   </div>
@@ -375,3 +376,4 @@
   </script>
 </body>
 </html>
+
