--- a/templates/login.html
+++ b/templates/login.html
@@ -36,8 +36,9 @@
           <div class="flash">{{ messages[0] }}</div>
         {% endif %}
       {% endwith %}
-      <p class="hint">admin / admin</p>
+      <p class="hint">© Redwood Collections Ltd 2025</p>
     </div>
   </div>
 </body>
 </html>
+
