--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -68,8 +68,8 @@
     .trans-rb,.note-actions,.trans-actions { width:30px; text-align:center; font-size:12px; }
     .grey-charge { color:#999!important; }
     .grey-charge td { color:#999!important; }
-    .btn-small { font-size:11px; padding:2px 6px; margin:0 2px; }
-    .btn-small.delete { background:#d9534f; }
+    . { font-size:11px; padding:2px 6px; margin:0 2px; }
+    ..delete { background:#d9534f; }
   </style>
 </head>
 <body>
@@ -179,7 +179,7 @@
                 <td class="note-text">{{ n.note }}</td>
                 <td>{{ n.username }}</td>
                 <td class="note-actions">
-                  <button class="btn-small" onclick="editNote({{ n.id }}, '{{ n.type }}', '{{ n.note|e('js') }}')">Edit</button>
+          <button class="btn-small" onclick="editNote({{ n.id }}, '{{ n.type }}', '{{ n.note|escapejs }}')">Edit</button>
                   <button class="btn-small delete" onclick="deleteNote({{ n.id }})">Del</button>
                 </td>
               </tr>
@@ -527,6 +527,7 @@
   </script>
 </body>
 </html>
+
 
 
 
